# MeshFEM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conda.yml
.github/workflows/: continuous.yml
cmake/: FindCHOLMOD.cmake  FindCholmod.cmake  FindUMFPACK.cmake  FindUmfpack.cmake  MeshFEMDependencies.cmake  MeshFEMDownloadExternal.cmake  MeshFEMSingleApp.cmake  MeshFEMUtils.cmake  PyModuleHelper.cmake  UseColors.cmake  Warnings.cmake  boost.cmake
docs/: TensorFlattening.tex
docs/Derivations/: IsotropicTensorDerivatives.nb  LagrangeTriangleFunctions.nb  OrthotropicTensorDerivatives.nb  Quadrature.nb  QuadratureValidation.nb  TriangleGaussFelippa.nb  tensors.nb
examples/boundary_conditions/: target_compress.bc
examples/cantilever/: cantilever.bc  cantilever_2D.bc  gen.sh  square.msh
examples/materials/: B9Creator.material
examples/meshes/: 2D_microstructure.msh  2D_microstructure_orthocell.msh  3D_microstructure_orthocell.msh  ball.msh  cube_cross.msh  cylinder_cross.msh  lilium.msh  square.off  square_hole.off
experiments/animate_cstrain/: colorize_gmsh.sh  render.opt  run.sh
experiments/circular_sector_homog/: CircularSector.cc  Makefile  convergence.py  errorData.py  gen_jobs.sh  get_edge_lengths.sh  ground_truth_values.sh  plot.sh  plot_displacements.gpi  plot_edge_lengths.gpi  plot_maxstrains.gpi  plot_relerrors.gpi  probe.opt  render.sh  render_scalarfield.opt  summarize.py
experiments/conductivity_inverse/: Conductivity.hh  conductivity_inverse.cc  omega.msh
experiments/elasticity_convergence/: compute_errors.py  create_flippers.sh  frames_template.js  gen_jobs.sh  material.sh  plot.gpi  plot.sh  plot_condest.gpi  run.sh  sample_point.sh  sin_top.bc
experiments/extrusion_validation/: ProJet7000_2D.material.material  compression_relative_2D.bc  compression_relative_3D.bc  extract_surface_stresses.cc  extract_top_face.cc  gen.sh  render.geo  render.sh  sample_poisson.msh
experiments/fit_validation/: compression_y_relative_2D.bc  crop_percentile.pl  frames.js  render.geo  render_iso.geo  render_ortho.geo  run.sh
experiments/geodesic_heat/: main.cc
experiments/isotropy_validation/: extract.sh  (+2 more)
python/: benchmark.py  compute_vibrational_modes.py  fd_validation.py  init_template.py  io_redirection.py  ipywidget_embedder.py  mesh_operations.py  meshing.py  mode_viewer.py  parallelism.py  param_utils.py  py_module_init.template  reflection.py  regions.py  registration.py  sim_utils.py  tri_mesh_viewer.py
src/lib/MeshFEM/: Algebra.hh  AutomaticDifferentiation.hh  BaseCellType.hh  BoundaryConditions.cc  BoundaryConditions.hh  BoundaryLaplacian.hh  BoundaryMesh.hh  CMakeLists.txt  CollisionGrid.hh  ComponentMask.hh  Concepts.hh  Curvature.hh  DenseCollisionGrid.hh  EdgeFields.cc  EdgeFields.hh  Eigensolver.cc  Eigensolver.hh  ElasticityTensor.hh  EmbeddedElement.hh  ExpressionVector.hh  FEMMesh.hh  FEMMesh.inl  FieldPostProcessing.hh  FieldSampler.cc  FieldSampler.hh  FieldSamplerMatrix.hh  Fields.hh  Flattening.hh  Functions.hh  Future.hh  GaussQuadrature.cc  GaussQuadrature.hh  Geometry.hh  GlobalBenchmark.cc  GlobalBenchmark.hh  GridFunction.hh  InterpolantRestriction.hh  JSFieldWriter.hh  Laplacian.hh  LinearElasticity.hh  (+49 more)
src/lib/MeshFEM/EnergyDensities/: CorotatedLinearElasticity.hh  EDensityAdaptors.hh  EnergyTraits.hh  IsoCRLETensionFieldMembrane.hh  IsoCRLEWithHessianProjection.hh  LinearElasticEnergy.hh  NeoHookeanEnergy.hh  StVenantKirchhoff.hh  TangentElasticityTensor.hh  TensionFieldTheory.hh  Tensor.hh
src/lib/MeshFEM/Handles/: Circulator.hh  FEMMeshHandles.hh  Handle.hh  TetMeshHandles.hh  TriMeshHandles.hh
src/lib/MeshFEM/Utilities/: ArrayPadder.hh  Cloning.hh  EdgeAccessAdaptor.hh  EdgeSoupAdaptor.hh  ElementArrayAdaptor.hh  IteratorMap.hh  MeshConversion.hh  NDArray.hh  NameMangling.hh  RandomAccessIndexSet.hh  VertexArrayAdaptor.hh  VoxelBoundaryMesh.hh  apply.hh  ci_string.hh  reduce.hh
src/lib/MeshFEM/algorithms/: get_element_components.hh  remove_if_index.hh
src/lib/MeshFEM/filters/: CurveCleanup.hh  ResampleCurve.hh  extract_component_polygons.hh  extract_hole_boundaries.hh  extract_polygons.hh  extrude.hh  gen_cursor.hh  gen_grid.hh  hex_tet_subdiv.hh  highlight_dangling_vertices.hh  merge_duplicate_vertices.hh  quad_subdiv.hh  quad_subdiv_high_aspect.hh  quad_tri_subdiv.hh  quad_tri_subdiv_asymmetric.hh  reflect.hh  remove_dangling_vertices.hh  remove_small_components.hh  reorient_negative_elements.hh  subdivide.hh  voxels_to_simplices.hh
src/lib/MeshFEM/libigl_aabb/: AABB.cpp  AABB.h  EPS.cpp  EPS.h  Hit.h  IndexComparison.h  LinSpaced.h  README.md  SortableRow.h  barycenter.cpp  barycenter.h  barycentric_coordinates.cpp  barycentric_coordinates.h  colon.cpp  colon.h  cross.cpp  cross.h  doublearea.cpp  doublearea.h  edge_lengths.cpp  edge_lengths.h  igl_inline.h  parallel_for.h  point_simplex_squared_distance.cpp  point_simplex_squared_distance.h  project_to_line.cpp  project_to_line.h  project_to_line_segment.cpp  project_to_line_segment.h  ray_box_intersect.cpp  ray_box_intersect.h  ray_mesh_intersect.cpp  ray_mesh_intersect.h  reorder.cpp  reorder.h  sort.cpp  sort.h  squared_edge_lengths.cpp  squared_edge_lengths.h  volume.cpp  (+1 more)
src/lib/MeshFEM/newton_optimizer/: ConvergenceReport.hh  HessianProjectionController.hh  HessianUpdateController.hh  dense_newton.hh  newton_optimizer.cc  newton_optimizer.hh
src/lib/MeshFEM/wrappers/: meshfem_triangle.h
src/python_bindings/: BindingInstantiations.hh  BindingUtils.hh  CMakeLists.txt  MSHFieldParser_bindings.cc  MSHFieldParser_bindings.hh  MSHFieldWriter_bindings.cc  MSHFieldWriter_bindings.hh  MeshEntities.hh  MeshFactory.hh  benchmark.cc  curvature.cc  differential_operators.cc  field_sampler.cc  filters.cc  mesh.cc  newton_optimizer.cc  parallelism.cc  parametrization.cc  periodic_homogenization.cc  sparse_matrices.cc  tensors.cc  triangulation.cc
tests/: CMakeLists.txt  TestTetMesh.cc  test_femmesh_traversal.cc  test_interpolant.cc  test_mass.cc  test_materials.cc  test_quadrature.cc  test_shape_functions.cc  test_sparse_matrices.cc  test_tensors.cc
(+55 files in other folders)
